[metadata]
name = atoolkitdpt
version = 0.0.1
author = Luciano Ambrosini
author_email = luciano.ambrosini@outlook.com
description = Midas modules for Ambrosinus-Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucianoambrosini/AToolkitDpt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True